syntax = "proto3";

package trueauth;

option go_package = "github.com/sirjager/trueauth/rpc";

message ResetRequest {
    // if already has password reset code
    string code = 1;
    // required: registered email address to reset
    string email = 2;
    // optional: true to signout all sessions
    bool signout_all = 3;

    // send with code to change new password
    string new_password = 4;
}

message ResetResponse {
    string message = 1;
}
